Re-Add support for codecov
Signed-off-by: Vincent Demeester <vincent@sbr.pm>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ install:
 script:
   - make validate
   - make binary
-  - make DAEMON_VERSION="all" test
+  - make CODECOV=1 DAEMON_VERSION="all" test
