--- a/codecov.yml
+++ b/codecov.yml
@@ -1,8 +1,12 @@
 codecov:
   token: 2f9972ec-1fbf-4414-9903-714c40908187
-  branch: master
-
+comment:
+  layout: header, changes, diff, sunburst
 coverage:
-  precision: 2
-  round: down
-  range: "70...100"
+  status:
+    patch: false
+    project:
+      default:
+        enabled: yes
+        target: 0
+    changes: false
